spade-tests/src/snapshots/spade_tests__ast_lowering__undefined_label_error.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(3) main(clk: clock) -> int<8> {
    reg;
        'a
        let x = 0;
    reg;
    reg;
        stage(b).x
}

error: Undefined pipeline stage
  ┌─ testinput:7:15
  │
7 │         stage(b).x
  │               ^ Cannot find pipeline stage 'b


